fixed bug for cursor pointer on hero img button and  navbar z-index

--- a/src/App.css
+++ b/src/App.css
@@ -97,7 +97,7 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: -1;
+  /* z-index: -1; */
   margin-bottom: 10rem;
 }
 .hero-content-container {
@@ -184,6 +184,7 @@ button {
   .navbar {
     position: fixed;
     top: 0;
+    z-index: 1000;
   }
   /* menu */
   .hamburger {
